# cloudnative_week6

./: submitter  submittermd5.txt  task1output1.json
p3django/: pyproject.toml  requirements.txt
p3django/docker/: Dockerfile
p3django/k8s/: configmap.yaml  deployment.yaml  job.yaml  mysql-deployment.yaml  mysql-service.yaml  mysql_statefulset.yaml  private_key.pem  public_key.pem  publickey.json  pvc.yaml  task1-deployment.yaml  task1-mysql-deployment.yaml  task1-mysql-service.yaml  task1-private_key.pem  task1-public_key.pem  task1-pvc.yaml  task1-service.yaml  task2-configmap.yaml  task2-job.yaml  task2-mysql_statefulset.yaml  task2-read_svc.yaml
p3django/p3login/: routers.py  settings.py  task2-routers.py
p3django/p3login/login/: views.py
t2-locust/: pyproject.toml
