[project]
name = "t2-locust"
version = "0.1.0"
description = ""
authors = [
    {name = "kalinchenko23"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "locust (>=2.33.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "t2_locust", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
